--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <meta name="google-site-verification" content="zb_A_hOrlBeNNeM3Cq_W76zcgjJoialRaiY5dnzXEqs" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
